Removed uses of List.of